# globdom

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile.am  README.md  build.sh  configure.ac  license.xml  project.xml  version.sh
api/: gdom_client.api
bindings/jni/: .gitignore  CMakeLists.txt  README.md  build.gradle  settings.gradle
bindings/jni/android/: CMakeLists.txt  build.sh
bindings/jni/src/main/c/: org_zeromq_gdom_GdomClient.c
bindings/jni/src/main/java/org/zeromq/gdom/: GdomClient.java
bindings/jni/src/test/java/org/zeromq/gdom/: GdomClientTest.java
builds/msvc/: platform.h  resource.rc
builds/msvc/vs2010/: build.bat  global_domination.sln
builds/msvc/vs2010/gdom_selftest/: gdom_selftest.vcxproj
builds/msvc/vs2010/gdomd/: gdomd.vcxproj
builds/msvc/vs2010/libgdom/: libgdom.props  libgdom.vcxproj  libgdom.vcxproj.filters
builds/msvc/vs2015/: build.bat  global_domination.import.props  global_domination.sln
builds/msvc/vs2015/gdom_selftest/: gdom_selftest.vcxproj
builds/msvc/vs2015/gdomd/: gdomd.props  gdomd.vcxproj
builds/msvc/vs2015/libgdom/: libgdom.import.xml  libgdom.vcxproj
doc/: Makefile.am  asciidoc.conf  gdom_client.doc  gdom_client.txt  gdom_server.doc  gdom_server.txt  gdomd.doc  gdomd.txt  global_domination.txt
include/: gdom_client.h  gdom_library.h  gdom_server.h  global_domination.h  globaldom.h
src/: Makemodule.am  gdom_classes.h  gdom_client.c  gdom_selftest.c  gdom_server.c  gdomd.c  libgdom.pc.in
